Update oak-lucene/src/main/java/org/apache/jackrabbit/oak/plugins/index/lucene/tools/IndexComparator.java
Co-authored-by: Fabrizio Fortino <fabrizio.fortino@gmail.com>